Fix centering on Splide carousel with no overflow

--- a/css/splide-mods.css
+++ b/css/splide-mods.css
@@ -6,6 +6,10 @@
   justify-content: center;
 }
 
+.splide:not(.is-overflow) .splide__slide:last-child {
+  margin: 0 !important;
+}
+
 .splide__track {
   margin-inline: 4rem;
 }
